# mcp_manager

./: .env.example  .gitignore  README.md  deploy_ecs.sh  dev.sh  pyproject.toml  start.sh  start_all.sh  start_services.sh  test_integration.py
src/api_to_mcp/: __init__.py  auth.py  cli.py  config.py  core.py  gateway.py  manager.py  registry.py  sse_server.py
src/api_to_mcp/examples/: calc_api.py  calc_mcp.py  todo_api.py  todo_mcp.py  todo_models.py
src/api_to_mcp/static/: index.html
